log/build_2023-01-17_19-30-27/ariac_gui/stderr.log
  File "/home/ubuntu/ariac_ws/install/ariac_gui/lib/python3.8/site-packages/ariac_gui/newGui.py", line 7
    from ariac_gui/Functions.checkCancel import *
                  ^
SyntaxError: invalid syntax

